# Graduation_Project

./: README.md
Main-Application/: CMakeLists.txt  README.md
Main-Application/src/: main.cpp
Rasp-to-Arduino/: README.md
Rasp-to-Arduino/src/: uart.cpp
Raspi-to-Arduino/: CMakeLists.txt
Yocto-image/: Readme.md
Yocto-image/Gradution_rpi5/conf/: bblayers.conf  local.conf
Yocto-image/meta-ai/conf/: layer.conf
Yocto-image/meta-ai/recipes-model/model/: model_1.0.bb
Yocto-image/meta-ai/recipes-model/model/model/: model.service  track.py
Yocto-image/meta-ai/recipes-model/model/model/model_int8_openvino_model_H/: metadata.yaml  model.xml
Yocto-image/meta-apps/recipes-arduino/arduino/: arduino_1.0.bb
Yocto-image/meta-apps/recipes-main/main/: main_1.0.bb
Yocto-image/meta-apps/recipes-main/main/mai/: main.service
Yocto-image/meta-apps/recipes-osm/osm/: osm_1.0.bb
Yocto-image/meta-apps/recipes-osm/osm/osm/: db.service  initialize_db.py  request.py  server.py  server.service
Yocto-image/meta-apps/recipes-osm/osm/osm/templates/: map.html
Yocto-image/meta-apps/recipes-v2c/v2c/: v2c_1.0.bb
Yocto-image/meta-apps/recipes-v2v/v2v/: v2v_1.0.bb
open_street_map/: README.md  request (1).py
open_street_map/osm/osm/: request.py
vehicle_to_cloud/: README.md
vehicle_to_vehicle/: README.md
vehicle_to_vehicle/Main-Vehicle/Esp32-To-Esp32/: README.md  v2v.c
vehicle_to_vehicle/Main-Vehicle/Rasp-to-ESP32/: CMakeLists.txt  README.md
vehicle_to_vehicle/Main-Vehicle/Rasp-to-ESP32/src/: uart.cpp
vehicle_to_vehicle/Other-Vehicle/: v2v.c
